ispCP ω 1.0.3 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-09-10 Andreca Daniel
	- DOCS:
		* Missing dependince

2009-09-09 Andreca Daniel
	- ENGINE:
		* Fixed #1979: Domain Alias Redirect

2009-09-09 Laurent Declercq
	- GUI:
		* Fixed #1971: DNS Entry in Hostingplan not overtaken
		* Fixed #1980: Per domain backup settings as part of Hosting Plan
	- ENGINE:
		* Fixed #1980: Per domain backup settings as part of Hosting Plan
	- DATABASE:
		* Changed named convention for domain backup field (related to #1980)

2009-09-08 Laurent Declercq
	- CONFIGS:
		* Fixed #1969: The 6th field of a system cron file must be the name of the user that the command will be executed

2009-09-07 Andreca Daniel
	- TOOLS:
		* Fixed #1948: Filemanager Config is wrong / ispCP pic is missing

2009-09-06 Laurent Declercq
	- ENGINE:
		* Fixed #1976: Deleting a user account by going properly

2009-09-06 Andreca Daniel
	- LANGUAGES:
		* Updated Catalan
		* Updated Danish

2009-09-05 Andreca Daniel
	- GUI:
		* Fixed #1975: Error update last version trunk 05/09
		* Fixed #1974: Reseller properties cannot be edited after working with his domains
	- LANGUAGES:
		* Updated Japanese

2009-09-04 Laurent Declercq
	- DOCS:
		* Updated OpenSuSE INSTALL file
		* Added new packages list file for OpenSuSE 11.1
		* Added repositories install script for OpenSuSE 11.1
		* Removed SuSE ( SLE ) documentation
	- DISTS:
		* Removed SuSE ( SLE ) support
		* Updated ( OpenSuSE ):
			- Added support for OpenSuse 11.1
			- Added postinst script for specific install/update tasks
			- Added Policyd-Weight and Postgrey packages
			- Fixed small error during Make process ( cannot overwrite non-directory... )
			- Fixed #1961: Debian and OpenSuSE provide both programs a2enmod/a2dismod but the implementation differs
			- Fixed #1961: Conflict between FastCGI modules conffiles
			- Fixed Postfix: unknown smtps service in master.cf
			- Fixed Postfix: wrong ispcp-arpl-msgr path in master.cf