@@ -166,7 +166,7 @@ function check_fwd_data(&$tpl, $alias_id) {
 		if (!chk_forward_url($forward_url)) {
 			$ed_error = tr("Incorrect forward syntax");
 		}
-		if (!preg_match("/\/$/", $forward_url)) {
+		if (!preg_match("/\/$/", $forward_url) && !preg_match("/\?/", $forward_url)) {
 			$forward_url .= "/";
 		}
 	}
