@@ -4,6 +4,8 @@ ispCP ω 1.0.3 Changelog
 2009-09-10 Andreca Daniel
 	- DOCS:
 		* Missing dependince
+	- GUI:
+		* Fixed #1979: Domain Alias Redirect
 
 2009-09-09 Andreca Daniel
 	- ENGINE:
